Updated page Macro FCInfo/de

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -554,12 +554,8 @@ Dies ist normal; die Z&auml;hlung von Arrays bzw. Listen in OpenCascade beginnt 
 <h3><span id="Einschr.C3.A4nkungen"></span><span class="mw-headline" id="Einschr&auml;nkungen">Einschr&auml;nkungen</span></h3>
 <p>Immer mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> verlassen. Wird das Programm verlassen, ohne die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span> zu verwenden, bleibt das Programm im Speicher und l&auml;uft weiter, und die Anzeige bleibt im "Ausgabefenster". FreeCAD muss beendet werden, um es aus dem Speicher zu l&ouml;schen. <br>
 In der Tabelle sind nur die ersten 200 Elemente des Objekts sichtbar. Enth&auml;lt das Objekt mehr als 200 Elemente, wird ein Signal durch <b>(! +200)</b> angezeigt. Die vollst&auml;ndige Datenliste ist in der Datei sichtbar, die mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span> gespeichert wird. <br>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Wenn das Fenstermakro nach der Ausf&uuml;hrung nicht sichtbar ist, siehe das untere Fenster:
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_08.png&amp;filetimestamp=20151217161419&amp;.html" class="mw-file-description"><img src="../File/Macro_FCInfo_08.png" decoding="async" width="453" height="615" class="mw-file-element" data-file-width="453" data-file-height="615"></a></span>
+</p><p>Wenn das Makrofenster nach der Ausf&uuml;hrung nicht sichtbar ist, siehe das untere Fenster:
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_08.png&amp;filetimestamp=20151217161419&amp;.html" class="mw-file-description"><img src="../File/Macro_FCInfo_08.png" decoding="async" width="453" height="615" class="mw-file-element" data-file-width="453" data-file-height="615"></a></span>
 </p><p><br>
 <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCInfo_begin_00.gif&amp;filetimestamp=20180115101243&amp;.html" class="mw-file-description"><img src="../File/FCInfo_begin_00.gif" decoding="async" width="535" height="662" class="mw-file-element" data-file-width="535" data-file-height="662"></a></span>
 </p>
@@ -705,13 +701,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119005507
+Cached time: 20260119005550
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.185 seconds
-Real time usage: 0.246 seconds
-Preprocessor visited node count: 1536/1000000
+CPU time usage: 0.197 seconds
+Real time usage: 0.248 seconds
+Preprocessor visited node count: 1535/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -721,19 +717,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   77.116      1 -total
-  6.53%    5.039      8 Template:RadioButton
-  6.02%    4.646     44 Template:LineEdit
-  5.44%    4.198     10 Template:CheckBox
-  5.35%    4.128     10 Template:Code
-  4.29%    3.307      5 Template:SpinBox
-  3.98%    3.070      1 Template:Macro/de
-  3.70%    2.856      1 Template:Codeextralink
-  3.67%    2.831      3 Template:Incode
-  3.49%    2.695     30 Template:False
+100.00%   71.916      1 -total
+  6.87%    4.938     10 Template:Code
+  6.43%    4.626      8 Template:RadioButton
+  6.01%    4.323     10 Template:CheckBox
+  5.86%    4.211     44 Template:LineEdit
+  4.20%    3.020      1 Template:Codeextralink
+  4.06%    2.922     30 Template:False
+  3.89%    2.801      1 Template:Macro/de
+  3.54%    2.542      5 Template:SpinBox
+  3.25%    2.335     25 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005507 and revision id 1740909. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005550 and revision id 1740911. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
