--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -560,7 +560,6 @@ In der Tabelle sind nur die ersten 200 Elemente des Objekts sichtbar. Enth&auml;
 <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FCInfo_begin_00.gif&amp;filetimestamp=20180115101243&amp;.html" class="mw-file-description"><img src="../File/FCInfo_begin_00.gif" decoding="async" width="535" height="662" class="mw-file-element" data-file-width="535" data-file-height="662"></a></span>
 </p>
 <div style="clear:both"></div>
-<div class="mw-translate-fuzzy">
 <p>Projekt: <br>
 <strike> lies die Datei direkt in einer Tabelle. </strike> done <br>
 <strike> stimmt mit den "Kanten" und ihren Koordinaten &uuml;berein </strike> done <br>
@@ -568,7 +567,6 @@ In der Tabelle sind nur die ersten 200 Elemente des Objekts sichtbar. Enth&auml;
 <strike> Neigung auf das Element und nicht auf das globale Objekt </strike> erledigt <br>
 <strike> Inlay direkt in der Oberfl&auml;che von FreeCAD </strike> fertig <br>
 </p>
-</div>
 <h2><span class="mw-headline" id="Version">Version</span></h2>
 <p>ver "1.30c" 2025/01/28&nbsp;: Verbindende ComboBox in Arch Linux
 </p><p>ersetzt:
@@ -701,13 +699,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119005550
+Cached time: 20260119005737
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.197 seconds
-Real time usage: 0.248 seconds
-Preprocessor visited node count: 1535/1000000
+CPU time usage: 0.212 seconds
+Real time usage: 0.304 seconds
+Preprocessor visited node count: 1534/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -717,19 +715,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   71.916      1 -total
-  6.87%    4.938     10 Template:Code
-  6.43%    4.626      8 Template:RadioButton
-  6.01%    4.323     10 Template:CheckBox
-  5.86%    4.211     44 Template:LineEdit
-  4.20%    3.020      1 Template:Codeextralink
-  4.06%    2.922     30 Template:False
-  3.89%    2.801      1 Template:Macro/de
-  3.54%    2.542      5 Template:SpinBox
-  3.25%    2.335     25 Template:Button
+100.00%   99.715      1 -total
+  6.48%    6.457      1 Template:Macro/de
+  5.17%    5.158     44 Template:LineEdit
+  4.92%    4.909     10 Template:CheckBox
+  4.84%    4.828      8 Template:RadioButton
+  4.80%    4.785     10 Template:Code
+  4.54%    4.524      3 Template:Incode
+  4.34%    4.324      1 Template:Codeextralink
+  4.27%    4.260      1 Template:CodeDownload
+  4.01%    3.994      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005550 and revision id 1740911. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005736 and revision id 1740913. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
