--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -659,36 +659,34 @@ In der Tabelle sind nur die ersten 200 Elemente des Objekts sichtbar. Enth&auml;
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">FreeCAD</span> <span class="o">&gt;</span><span class="n">Menu</span> <span class="o">&gt;</span><span class="n">Tools</span> <span class="o">&gt;</span><span class="n">Edit</span> <span class="n">parameters</span><span class="o">...</span> <span class="o">&gt;</span><span class="n">BaseApp</span><span class="o">/</span><span class="n">Preferences</span><span class="o">/</span><span class="n">Macros</span><span class="o">/</span><span class="n">FCMmacros</span><span class="o">/</span><span class="n">FCInfo</span> <span class="o">&gt;</span> <span class="n">switchWarning</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<ul><li>ver 1.21-3.01 , 07/11/2019 # 07/11/2019 ver "01.21-3-rmu" replace character micro = "U", square = "2", cube = "3", degrees = " deg" see "<a rel="nofollow" class="external free" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=6005&amp;start=70#p345819">https://forum.freecad.org/viewtopic.php?f=3&amp;t=6005&amp;start=70#p345819</a>"</li>
-<li>ver 1.21-2.01 (1.21-rmu) 11/06/2019: rmu replace all characters over 127 in ex: "&deg;" in chr(176))    #degree</li>
-<li>ver 1.21.01 (1.21-rmu) 30/05/2019: rmu change fixed positions to qt layouts grid.addWidget() by rmu75 see the rmu75 fork "<a rel="nofollow" class="external free" href="https://gist.github.com/rmu75/b165147bd1c2f2659c014103793ae1d8">https://gist.github.com/rmu75/b165147bd1c2f2659c014103793ae1d8</a>"</li>
+<ul><li>ver 1.21-3.01 , 07/11/2019 # 07/11/2019 ver "01.21-3-rmu" Zeichen ersetzt micro = "U", square = "2", cube = "3", degrees = " deg" siehe "<a rel="nofollow" class="external free" href="https://forum.freecad.org/viewtopic.php?f=3&amp;t=6005&amp;start=70#p345819">https://forum.freecad.org/viewtopic.php?f=3&amp;t=6005&amp;start=70#p345819</a>"</li>
+<li>ver 1.21-2.01 (1.21-rmu) 11/06/2019: rmu Ersetze alle Zeichen &uuml;ber 127 in ex: "&deg;" in chr(176))    #degree</li>
+<li>ver 1.21.01 (1.21-rmu) 30/05/2019: rmu Feste Positionen in Qt-Layouts &auml;ndern grid.addWidget() by rmu75 siehe den Fork von  rmu75 "<a rel="nofollow" class="external free" href="https://gist.github.com/rmu75/b165147bd1c2f2659c014103793ae1d8">https://gist.github.com/rmu75/b165147bd1c2f2659c014103793ae1d8</a>"</li>
 <li>ver 1.21 , 16/04/2019: Optimierung f&uuml;r Py 3... Qt 5...  FreeCAD-Ausgaben 0.15 bis 0.19</li>
 <li>ver 1.20 , 29/01/2018: Optimierung</li>
-<li>ver 1.19 , 20/01/2018: create checkBox for use detection all elements of the object if wanted or not , das Makro ist schneller. Optimierung</li>
+<li>ver 1.19 , 20/01/2018: Ein Kontrollk&auml;stchen erstellt, um alle Elemente des Objekts zu &uuml;berpr&uuml;fen, ob sie gew&uuml;nscht sind oder nicht, das Makro ist schneller. Optimierung</li>
 <li>ver 1.18 , 19/12/2017: ...</li>
-<li>ver 1.17c , 14/12/2017: create plane with coordinate give in one project in other project and replace "FCInfo" by "__title__"</li>
+<li>ver 1.17c , 14/12/2017: Eine Ebene mit den Koordinaten erstellen, die in einem Projekt angegeben sind, in einem anderen Projekt und diese ersetzen. "FCInfo" by "__title__"</li>
 <li>ver 1.17b , 13/12/2017: Kleinere Korrekturen, FCTreeView durch FCInfo ersetzt</li>
-<li>ver 1.17 , 12/12/2017: add upgrade Moment of inertia mm and kg by pinq <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=23888">FCMacro and moment of inertia of assembly</a>, and create plane, axis, point, and add options separator for spreadsheet</li>
-<li>ver 1.16 , 21/06/2017: add control height police (here PointSize 8) and checkbox for position the window to right or left<br></li>
-<li>ver 1.15 , 19/12/2015: suppression PyQt4 option <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=12&amp;t=13541">see</a> , add checkBox for editing infos in report view<br></li>
-<li>ver 1.14 , 04/08/2014: Ersetzt PyQt4 sowie PySide und correct tooltip not displayed cause on PySide and add fg<br></li>
+<li>ver 1.17 , 12/12/2017: Upgrade hinzuf&uuml;gen Tr&auml;gheitsmoment mm und kg durch pinq <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=23888">FCMacro and moment of inertia of assembly</a>, und Ebene, Achse, Punkt erstellen und Optionstrennzeichen f&uuml;r Tabellenkalkulation hinzuf&uuml;gen</li>
+<li>ver 1.16 , 21/06/2017: Kontrollh&ouml;he hinzuf&uuml;gen (hier PointSize 8) und Kontrollk&auml;stchen zum Positionieren des Fensters rechts oder links<br></li>
+<li>ver 1.15 , 19/12/2015: Entfernung der Option PyQt4 <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=12&amp;t=13541">see</a> , Checkbox zum Bearbeiten von Informationen im Ausgabefenster hinzuf&uuml;gen<br></li>
+<li>ver 1.14 , 04/08/2014: Ersetzt PyQt4 sowie PySide und Korrekte Tooltip-Anzeige unter PySide nicht m&ouml;glich und fg hinzuf&uuml;gen<br></li>
 <li>ver 1.13 , 27/07/2014: FCInfo_en_Ver_1-12_Docked.FCMacro durch FCInfo_en_Ver_1-13_Docked.FCMacro accept PyQt4 and PySide ersetzt<br></li>
 <li>ver 1.12 , 10/03/2014: Tooltipps hinzugef&uuml;gt<br></li>
-<li>ver 1.11 , 04/03/2014: &micro;m, nm, pm, fm, &micro;g, ng, pg, percent hinzugef&uuml;gt, grandeur carat <strike>"cd"</strike> zu <b>"ct"</b> ge&auml;ndert, Anzeige von Benennung und internem Namen, Berechnung von Winkeln korrigiert XY YZ ZX could give an error on a compound shape, Fenster andockbar in FreeCAD<br></li>
+<li>ver 1.11 , 04/03/2014: &micro;m, nm, pm, fm, &micro;g, ng, pg, percent hinzugef&uuml;gt, grandeur carat <strike>"cd"</strike> zu <b>"ct"</b> ge&auml;ndert, Anzeige von Benennung und internem Namen, Berechnung von Winkeln korrigiert XY YZ ZX k&ouml;nnte bei einer zusammengesetzten Form einen Fehler verursachen, Fenster andockbar in FreeCAD<br></li>
 <li>ver 1.10b , 19/11/2013: Schaltfl&auml;chen au&szlig;erhalb der Scroll-Leiste und die blockierten Fensterma&szlig;e<br></li>
 <li>ver 1.10 , 18/11/2013: Scroll-Leiste erstellen<br></li>
 <li>ver 1.08b , 10/11/2013: &Uuml;bersetzungseinheiten in Englisch, Fehlerkorrektur f&uuml;r den Fl&auml;chenihhalt der aufgelisteten Fehler in der Tabelle und Ersatz von"<b>print</b>" durch "<b>App.Console.PrintMessage</b>"<br></li>
-<li><strike>ver 1.09 , 04/11/2013: Arbeitet optimal mit Windows und Linux (Grund f&uuml;r Fehler unter Linux: die Zeichen &sup2; &sup3; &deg; "ordinal not in range(128)") </strike><br></li>
-<li>ver 1.08 , 24/10/2013: correction of high top "Faces" and "Edges" displaying 100 objects (in der gespeicherten Datei)<br></li>
+<li><strike>ver 1.09 , 04/11/2013: Arbeitet optimal mit Windows und Linux (Grund f&uuml;r Fehler unter Linux: die Zeichen &sup2; &sup3; &deg; "Ordnungszahl au&szlig;erhalb des Bereichs (128)") </strike><br></li>
+<li>ver 1.08 , 24/10/2013: Korrektur der hohen Anzahl von &bdquo;Fl&auml;chen&ldquo; und &bdquo;Kanten&ldquo;, die 100 Objekte anzeigen (in der gespeicherten Datei)<br></li>
 <li>ver 1.07 , 11/10/2013: Stimmt die "Fl&auml;chen" und ihre Koordinaten ab.<br></li>
-<li>ver 1.06 , 22/09/2013: Stimmt die "Kanten" und ihre Koordinaten ab, inclination on the element rather than the global object<br></li>
+<li>ver 1.06 , 22/09/2013: Stimmt die "Kanten" und ihre Koordinaten ab, Neigung auf dem Element statt auf dem globalen Objekt<br></li>
 <li>ver 1.05 , 17/09/2013: Ein Symbol f&uuml;r das Tabellenblatt hinzugef&uuml;gt, Umwandlung zu Ma&szlig;en anstatt Koordinaten.<br></li>
 <li>ver 1.04 , 11/09/2013: Liest die Datei direkt in eine Tabelle.<br></li>
 <li>ver 1.03 , 09/09/2013: Deutlichere Darstellung im Ausgabefenster und Ersatz durch "typeObject = sel[0].Shape.ShapeType"<br></li>
 <li>ver 1.02 , 7/09/2013&nbsp;: Kleinere Aktualisierungen<br></li>
 <li>ver 1.00 , 6/09/2013<br></li></ul>
-</div>
 <p><span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
@@ -699,13 +697,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119005737
+Cached time: 20260119054142
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.212 seconds
-Real time usage: 0.304 seconds
-Preprocessor visited node count: 1534/1000000
+CPU time usage: 0.213 seconds
+Real time usage: 1.124 seconds
+Preprocessor visited node count: 1533/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5251/2097152 bytes
 Highest expansion depth: 6/100
@@ -715,19 +713,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.715      1 -total
-  6.48%    6.457      1 Template:Macro/de
-  5.17%    5.158     44 Template:LineEdit
-  4.92%    4.909     10 Template:CheckBox
-  4.84%    4.828      8 Template:RadioButton
-  4.80%    4.785     10 Template:Code
-  4.54%    4.524      3 Template:Incode
-  4.34%    4.324      1 Template:Codeextralink
-  4.27%    4.260      1 Template:CodeDownload
-  4.01%    3.994      1 Template:Caption
+100.00%  355.150      1 -total
+ 10.36%   36.777     10 Template:Code
+  5.42%   19.254      1 Template:CodeDownload
+  5.26%   18.677      8 Template:RadioButton
+  4.91%   17.449     19 Template:True
+  3.60%   12.770      5 Template:SpinBox
+  3.58%   12.722      5 Template:Clear
+  2.22%    7.889     25 Template:Button
+  2.19%    7.770      1 Template:Macro/de
+  1.95%    6.929     10 Template:CheckBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119005736 and revision id 1740913. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119054140 and revision id 1740917. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
