Created page with "*Oberfläche der angezeigten Form, Einheitsgröße kann ausgewählt werden. {{LineEdit|600.0 mm2}} *Oberfläche der angezeigten Fläche, Einheitsgröße kann ausgewählt werden. {{LineEdit|0.0 mm2}} *Volumen der angezeigten Form, Einheitsgröße kann ausgewählt werden. {{LineEdit|1000.0 mm3}} *Einheit, die Einheit auswählen. *Die Einheitsmasse {{ComboBox|gram}} kann ausgewählt werden. :<br /> ton,quintal, kg, hg, dag, '''gram''', dg, cg, mg, µg, ng, pg, fg, gr (grain..."

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -208,20 +208,19 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span id="Abschnitt_7:_Oberfl.C3.A4che_und_Volumen"></span><span class="mw-headline" id="Abschnitt_7:_Oberfl&auml;che_und_Volumen">Abschnitt 7: Oberfl&auml;che und Volumen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Surface_and_Volume_00.png&amp;filetimestamp=20221021104109&amp;.html" class="mw-file-description" title="FCInfo Oberfl&auml;che und Volumen"><img alt="FCInfo Oberfl&auml;che und Volumen" src="../File/Macro_FCInfo_Surface_and_Volume_00.png" decoding="async" width="397" height="326" class="mw-file-element" data-file-width="397" data-file-height="326"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Surface of the form displayed, unit size can be selected. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">600.0 mm2</span></li>
-<li>Surface of the face displayed, unit size can be selected. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.0 mm2</span></li>
-<li>Volume of the form displayed, unit size can be selected. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">1000.0 mm3</span></li>
-<li>Unit , choice your unit.</li>
-<li>The <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">gram  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> unit mass can be chosen&nbsp;:<br> ton,quintal, kg, hg, dag, <b>gram</b>, dg, cg, mg, &micro;g, ng, pg, fg, gr (grain), dr (drachm), oz (once), oz t (once troy),<br>lb t (livre troy), lb (livre av), st (stone), qtr (quarter), cwt (hundredweight), tonneau fr, ct.</li>
-<li>Weight of the form displayed, unit mass can be selected. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.7 g</span></li>
-<li>Density of the material in <b>kg by dm3</b>  <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.7000 kg (by dm3)</span></li>
+<ul><li>Oberfl&auml;che der angezeigten Form, Einheitsgr&ouml;&szlig;e kann ausgew&auml;hlt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">600.0 mm2</span></li>
+<li>Oberfl&auml;che der angezeigten Fl&auml;che, Einheitsgr&ouml;&szlig;e kann ausgew&auml;hlt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0.0 mm2</span></li>
+<li>Volumen der angezeigten Form, Einheitsgr&ouml;&szlig;e kann ausgew&auml;hlt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">1000.0 mm3</span></li>
+<li>Einheit, die Einheit ausw&auml;hlen.</li>
+<li>Die Einheitsmasse <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">gram  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> kann ausgew&auml;hlt werden.&nbsp;:<br> ton,quintal, kg, hg, dag, <b>gram</b>, dg, cg, mg, &micro;g, ng, pg, fg, gr (grain), dr (drachm), oz (once), oz t (once troy),<br>lb t (livre troy), lb (livre av), st (stone), qtr (quarter), cwt (hundredweight), tonneau fr, ct.</li>
+<li>Gewicht der angezeigten Form, Einheitsmasse kann ausgew&auml;hlt werden. <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.7 g</span></li>
+<li>Dichte des Materials in <b>kg pro dm3</b>  <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">2.7000 kg (pro dm3)</span></li>
 <li>Material <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Metal Nickel (Ni),8.27,10.0,adapt Price  <span typeof="mw:File"><a href="../index.php?title=ComboBox.svg&amp;filetimestamp=20200329183052&amp;.html" class="mw-file-description"><img src="../File/ComboBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span>
-<ul><li>In beginning the macro search the file <b>FCInfo_material.txt</b>, if the file not exist, one file FCInfo_material.txt is created.</li>
-<li>The file is created with 10 types of material saved in this format.
-<ul><li><b>Title of material , Density on dm3 , Price on dm3 , text info on choice</b></li>
-<li><i>(4 fields separate by coma)</i></li>
-<li>Liquid Water (H2o),1,10.0,adapt Price</li>
+<ul><li>Zu Beginn der Makrosuche wird die Datei &bdquo;FCInfo_material.txt&rdquo; gesucht. Wenn die Datei nicht vorhanden ist, wird eine Datei &bdquo;FCInfo_material.txt&rdquo; erstellt.</li>
+<li>Die Datei wird mit 10 Materialtypen erstellt, die in diesem Format gespeichert sind.
+<ul><li><b>Materialbezeichnung, Dichte in dm3, Preis in dm3, Textinfo zur Auswahl</b></li>
+<li><i>(4 Felder durch Komma getrennt)</i></li>
+<li>Fl&uuml;ssiges Wasser (H2o),1,10.0,adapt Price</li>
 <li>Mater Beton,2.4,10.0,adapt Price</li>
 <li>Metal Aluminium (Al),2.7,10.0,adapt Price</li>
 <li>Metal Copper (Cu),8.96,10.0,adapt Price</li>
@@ -241,19 +240,17 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <li>Wood Mahogany,0.6,10.0,adapt Price</li>
 <li>Wood Oak,0.7,10.0,adapt Price</li>
 <li>Wood White pine,0.4,10.0,adapt Price</li></ul></li></ul></li>
-<li>New material or editing <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Metal Nickel (Ni),8.27,10.0,adapt Price</span>
-<ul><li>you can modify or edit one new material in this format:</li>
-<li><b>Title, Density on dm3, Price on dm3, text info on choice</b></li>
-<li><i>(4 fields separate by coma)</i></li>
-<li><i>you can also edit the file in your favorite editor respecting the specific format</i></li>
-<li>you can save the file in a path desired with the variable&nbsp;: <b>seTMaterialSavePathName</b></li>
-<li><i>by default the file is created in the macro path</i></li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Delete 1/17</span>&nbsp;: delete the displayed field</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span>&nbsp;: save the modification or the new material</li></ul></li></ul>
-<p><i>(you can set the variable <b>switch_setVisible_GBox_007_Surface_and_Volume</b> to <code>false</code> to hide the Box)</i>
-</p>
-</div>
-<p><span id="Sector_8:_Cost"></span>
+<li>Neues Material oder Bearbeitung <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Metall Nickel (Ni),8,27,10,0,Preis anpassen</span>
+<ul><li>Ein neues Material kann in diesem Format ge&auml;ndert oder bearbeitet werden:</li>
+<li><b>Titel, Dichte in dm3, Preis in dm3, Textinfo nach Wahl</b></li>
+<li><i>(4 Felder durch Komma getrennt)</i></li>
+<li><i>Die Datei auch im bevorzugten Editor unter Beachtung des spezifischen Formats bearbeitet werden.</i></li>
+<li>Die Datei mit der Variablen <b>seTMaterialSavePathName</b> kann in einem beliebigen Pfad gespeichert werden.</li>
+<li><i>Standardm&auml;&szlig;ig wird die Datei im Makropfad erstellt.</i></li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Delete1/17</span>&nbsp;: Das angezeigte Feld l&ouml;schen.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span>&nbsp;: Die &Auml;nderung oder das neue Material speichern.</li></ul></li></ul>
+<p><i>(Die Variable <b>switch_setVisible_GBox_007_Surface_and_Volume</b> auf <code>false</code> setzen, um die Box auszublenden.)</i>
+</p><p><span id="Sector_8:_Cost"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_8:_Kosten">Abschnitt 8: Kosten</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Cost_00.png&amp;filetimestamp=20221021121607&amp;.html" class="mw-file-description" title="FCInfo Kosten"><img alt="FCInfo Kosten" src="../File/Macro_FCInfo_Cost_00.png" decoding="async" width="398" height="92" class="mw-file-element" data-file-width="398" data-file-height="92"></a></span>
@@ -697,15 +694,15 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119054142
+Cached time: 20260119054630
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.213 seconds
-Real time usage: 1.124 seconds
-Preprocessor visited node count: 1533/1000000
-Post&#8208;expand include size: 40879/2097152 bytes
-Template argument size: 5251/2097152 bytes
+Real time usage: 0.282 seconds
+Preprocessor visited node count: 1532/1000000
+Post&#8208;expand include size: 40883/2097152 bytes
+Template argument size: 5255/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
@@ -713,19 +710,19 @@ Unstrip post&#8208;expand size: 15820/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  355.150      1 -total
- 10.36%   36.777     10 Template:Code
-  5.42%   19.254      1 Template:CodeDownload
-  5.26%   18.677      8 Template:RadioButton
-  4.91%   17.449     19 Template:True
-  3.60%   12.770      5 Template:SpinBox
-  3.58%   12.722      5 Template:Clear
-  2.22%    7.889     25 Template:Button
-  2.19%    7.770      1 Template:Macro/de
-  1.95%    6.929     10 Template:CheckBox
+100.00%   81.767      1 -total
+  7.18%    5.874     44 Template:LineEdit
+  5.64%    4.608      8 Template:RadioButton
+  4.87%    3.986     10 Template:CheckBox
+  4.87%    3.984      1 Template:Macro/de
+  4.54%    3.710     10 Template:Code
+  3.62%    2.960      5 Template:SpinBox
+  3.58%    2.929      1 Template:CodeDownload
+  3.02%    2.469      1 Template:Caption
+  2.97%    2.430     30 Template:False
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119054140 and revision id 1740917. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119054629 and revision id 1740919. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
