Created page with "*Ort : '''Werkzeuge > Parameter bearbeiten > *Benutzer-Parameter:BaseApp/Preferences/Macros/FCMmacros/FCInfo/''' *'''switchNotInfoOnBeginning'''   '''#''' SetBool {{true}} oder [{{false}}] **Diese Textinformation beim Ausführen des Makros anzeigen oder nicht ***[{{false}}] = Zeigt diese Information an. *** {{true}}   = Diese Information wird nicht von Anfang an angezeigt. *'''switchVersionSearch'''        '''#''' SetBool {{true}} oder [{{false}}] **Suchen, ob eine neue..."

--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_FCInfo.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCInfo (80% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (50% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -411,97 +411,95 @@ lb t (livre troy), lb (livre av), st (stone), qtr (quarter), cwt (hundredweight)
 </p><p><span id="FCInfo_Configuration"></span>
 </p>
 <h4><span class="mw-headline" id="FCInfo-Konfiguration">FCInfo-Konfiguration</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Location&nbsp;: <b>Tools &gt; Edit parameter &gt; *User parameter:BaseApp/Preferences/Macros/FCMmacros/FCInfo/</b></li>
-<li><b>switchNotInfoOnBeginning</b>   <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Display or not this text information on run macro
-<ul><li>[<code>false</code>] = display this information</li>
-<li><code>true</code>   = this information is not displayed from beginning</li></ul></li></ul></li>
-<li><b>switchVersionSearch</b>        <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Search if one new version exist on run macro</li></ul></li>
-<li><b>switchWarning</b>              <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Display or not display the window warning in case not good selection</li></ul></li>
-<li><b>switchCreatePoint</b>          <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Check the Create point checkBox</li></ul></li>
-<li><b>switchCreateAxis</b>           <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Check the Create axis checkBox</li></ul></li>
-<li><b>switchCreatePlane</b>          <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Check the Create plane checkBox</li></ul></li>
-<li><b>switchDisplayInfoObject</b>    <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Check the info checkBox</li></ul></li>
-<li><b>switchClearDisplayReportView</b> <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>if switchClearDisplayReportView is <code>true</code> the ReportView is cleared</li></ul></li>
-<li><b>seTWidgetPosition</b>          <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Check the Widget Position Left/Right checkBox</li>
-<li>if seTWidgetPosition [<code>false</code>]&nbsp;: if seTPositionFlyRightLeft = 2 = docked to Right</li>
-<li>if seTWidgetPosition  <code>true</code>  &nbsp;: if seTPositionFlyRightLeft = 3 = docked to Left</li>
-<li>if it is 1 the window macro is not docked</li></ul></li>
-<li><b>switchBoundBoxCreateText</b>   <b>#</b> SetBool <code>true</code> or [<code>false</code>]
-<ul><li>Create the text dimension of the BoundBox</li></ul></li>
+<ul><li>Ort&nbsp;: <b>Werkzeuge &gt; Parameter bearbeiten &gt; *Benutzer-Parameter:BaseApp/Preferences/Macros/FCMmacros/FCInfo/</b></li>
+<li><b>switchNotInfoOnBeginning</b>   <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Diese Textinformation beim Ausf&uuml;hren des Makros anzeigen oder nicht
+<ul><li>[<code>false</code>] = Zeigt diese Information an.</li>
+<li><code>true</code>   = Diese Information wird nicht von Anfang an angezeigt.</li></ul></li></ul></li>
+<li><b>switchVersionSearch</b>        <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Suchen, ob eine neue Version vorhanden ist, wenn das Makro ausgef&uuml;hrt wird</li></ul></li>
+<li><b>switchWarning</b>              <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Fensterwarnung anzeigen oder nicht anzeigen, wenn keine gute Auswahl getroffen wurde</li></ul></li>
+<li><b>switchCreatePoint</b>          <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Das Kontrollk&auml;stchen Create point aktivieren</li></ul></li>
+<li><b>switchCreateAxis</b>           <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Das Kontrollk&auml;stchen Create axis aktivieren</li></ul></li>
+<li><b>switchCreatePlane</b>          <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Das Kontrollk&auml;stchen Create plane aktivieren</li></ul></li>
+<li><b>switchDisplayInfoObject</b>    <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Das Kontrollk&auml;stchen info aktivieren</li></ul></li>
+<li><b>switchClearDisplayReportView</b> <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Wenn switchClearDisplayReportView <code>true</code> ist, wird das Ausgabefenster gel&ouml;scht</li></ul></li>
+<li><b>seTWidgetPosition</b>          <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Das Kontrollk&auml;stchen Widget Position Left/Right aktivieren</li>
+<li>Wenn seTWidgetPosition [<code>false</code>]&nbsp;: wenn seTPositionFlyRightLeft = 2 = Rechts angedockt</li>
+<li>Wenn seTWidgetPosition  <code>true</code>  &nbsp;: wenn seTPositionFlyRightLeft = 3 = Links angedockt</li>
+<li>Wenn der Wert 1 ist, ist das Makrofenster nicht angedockt.</li></ul></li>
+<li><b>switchBoundBoxCreateText</b>   <b>#</b> SetBool <code>true</code> oder [<code>false</code>]
+<ul><li>Die Textgr&ouml;&szlig;e der BoundBox einstellen.</li></ul></li>
 <li><b>seTBoundBoxTextHeigth</b>      <b>#</b> seTBoundBoxTextHeigth      = 3.0
-<ul><li>Give the Heigth of the text dimension (independent of the seTTextHeigthValue)</li></ul></li>
+<ul><li>Die H&ouml;he der Textabmessungen angeben. (unabh&auml;ngig von der seTTextHeigthValue)</li></ul></li>
 <li><b>seTBoundBoxTextArround</b>     <b>#</b> seTBoundBoxTextArround     = 3
-<ul><li>Give the arround of the text dimensions (independent of the seTDecimalValue)</li></ul></li>
+<ul><li>Die Abmessungen des Textes angeben. (unabh&auml;ngig von der seTDecimalValue)</li></ul></li>
 <li><b>seTMemoClipBoard</b>           <b>#</b> SetInt [0], 1, 2, 3
-<ul><li>Give one value [0], 1, 2, 3 clipBoard
-<ul><li>[0] = desactivate the clipBoard</li>
-<li>1 = the data string is memorised to&nbsp;: FreeCAD.Vector( X, Y, Z )</li>
-<li>2 = the data string is memorised to&nbsp;: X, Y, Z</li>
-<li>3 = the data string is memorised to&nbsp;: X Y Z</li></ul></li></ul></li>
+<ul><li>Einen Wert vorgeben [0], 1, 2, 3 clipBoard
+<ul><li>[0] = deaktiviert die Zwischenablage (clipBoard)</li>
+<li>1 = Die Datenzeichenfolge wird gespeichert unter&nbsp;: FreeCAD.Vector( X, Y, Z )</li>
+<li>2 = Die Datenzeichenfolge wird gespeichert unter&nbsp;: X, Y, Z</li>
+<li>3 = Die Datenzeichenfolge wird gespeichert unter&nbsp;: X Y Z</li></ul></li></ul></li>
 <li><b>seTTextHeigthValue</b>         <b>#</b> SetInt 11
-<ul><li>Give one text heigth value of the macro</li></ul></li>
+<ul><li>Einen Texth&ouml;he f&uuml;r das Makro angeben</li></ul></li>
 <li><b>seTDecimalValue</b>            <b>#</b> SetInt 4
-<ul><li>Give the number of decimal displayed</li>
-<li>If the number is -1 the total decimal value is displayed)</li></ul></li>
+<ul><li>Die Anzahl der angezeigten Dezimalstellen angeben</li>
+<li>Wenn die Zahl -1 ist, wird der gesamte Dezimalwert angezeigt)</li></ul></li>
 <li><b>seTMaterialCurrentIndex</b>    <b>#</b> SetInt 0
-<ul><li>Set the index of the ComboBox</li></ul></li>
+<ul><li>Den Index der ComboBox festlegen</li></ul></li>
 <li><b>seTMaterialFileName</b>        <b>#</b> SetString FCInfo_material.txt
-<ul><li>Name of the material file</li></ul></li>
+<ul><li>Name der Materialdatei</li></ul></li>
 <li><b>seTMaterialSavePathName</b>    <b>#</b> SetString C:\...\Macro\FCInfo_material.txt
-<ul><li>Path name of the material file</li></ul></li>
+<ul><li>Pfadname der Materialdatei</li></ul></li>
 <li><b>seTMaterialPrice</b>           <b>#</b> SetFloat
-<ul><li>Material price by Kg</li></ul></li>
+<ul><li>Materialpreis pro Kg</li></ul></li>
 <li><b>seTMaterialSuffixDevise</b>    <b>#</b> SetString
-<ul><li>Devise money</li></ul></li>
+<ul><li>Materialpreis</li></ul></li>
 <li><b>seTMaterialSuffixCost</b>      <b>#</b> seTMaterialSuffixCost
-<ul><li>Suffix Devise cost</li></ul></li>
+<ul><li>Suffix des Materialpreis</li></ul></li>
 <li><b>seTMaterialCost</b>            <b>#</b> SetFloat
-<ul><li>Material cost</li></ul></li>
+<ul><li>Materialkosten</li></ul></li>
 <li><b>seTDensiteValue</b>            <b>#</b> SetFloat 1.0
-<ul><li>Give the densite value</li></ul></li>
+<ul><li>Dichtewert angegeben</li></ul></li>
 <li><b>seTDensiteDecimalNumber</b>    <b>#</b> SetInt 4
-<ul><li>Give the number of decimal for the densite value</li></ul></li>
+<ul><li>Die Anzahl der Dezimalstellen f&uuml;r den Dichtewert angeben.</li></ul></li>
 <li><b>seTDensiteSingleStep</b>       <b>#</b> SetFloat 1.0
-<ul><li>Give the step for one click, by default 1.0 (possible 0.01 or ...)</li></ul></li>
+<ul><li>Den Schritt f&uuml;r einen Klick angeben, standardm&auml;&szlig;ig 1,0. (m&ouml;glich 0.01 oder ...)</li></ul></li>
 <li><b>seTDensiteSuffixChain</b>      <b>#</b> SetString  kg (by dm3)
-<ul><li>Choice your suffix string</li></ul></li>
+<ul><li>Die Suffix-Zeichenfolge ausw&auml;hlen</li></ul></li>
 <li><b>seTPositionFlyRightLeft</b>    <b>#</b> SetInt 2
-<ul><li>Choice your position, Fly, [Right], Left
-<ul><li>1  = the macro window is fly (not docked)</li>
-<li>[2] = the macro window is positioned to Right</li>
-<li>3 or other = the macro window is positioned to Left</li></ul></li></ul></li>
+<ul><li>Die Position w&auml;hlen, Fly (Schwebend), [Right] (Rechts), Left (Links)
+<ul><li>1  = Das Makrofenster schwebt (nicht angedockt)</li>
+<li>[2] = Das Makrofenster ist rechts ausgerichtet</li>
+<li>3 oder anders = Das Makrofenster ist links ausgerichtet</li></ul></li></ul></li>
 <li><b>seTIndexUnitWeight</b>         <b>#</b> SetInt
-<ul><li>Set unit Weight index</li></ul></li>
+<ul><li>Einheit festlegen Gewichtsindex</li></ul></li>
 <li><b>seTUnitSymbolMicro</b>         <b>#</b> U
-<ul><li>Set Symbol Micro</li></ul></li>
+<ul><li>Symbol einstellen Mikro</li></ul></li>
 <li><b>seTUnitSymbolCube</b>          <b>#</b> 3
-<ul><li>Set Symbol Cube</li></ul></li>
+<ul><li>Symbolw&uuml;rfel setzen</li></ul></li>
 <li><b>seTUnitSymbolCarre</b>         <b>#</b> 2
-<ul><li>Set Symbol Square</li></ul></li>
+<ul><li>Symbolquadrat festlegen</li></ul></li>
 <li><b>seTIndexUnitLength</b>         <b>#</b> SetInt
-<ul><li>Set unit Length index</li></ul></li>
+<ul><li>Einheit festlegen L&auml;ngenindex</li></ul></li>
 <li><b>setBSplineToByArcValue</b>     <b>#</b> SetFloat 0.00001
-<ul><li>Set unit for cut the BSpline for seack the radius on point given</li></ul></li>
+<ul><li>Einheit zum Schneiden der BSpline einstellen, um den Radius an einem bestimmten Punkt zu suchen</li></ul></li>
 <li><b>setMeshTopologyValue</b>       <b>#</b> SetFloat 0.1
-<ul><li>Set unit for create the Mesh to Shape</li></ul></li>
+<ul><li>Einheit zum Erstellen des Netzes f&uuml;r die Form festlegen</li></ul></li>
 <li><b>switchBSplineCreateCircleConstructorAxis</b>  <b>#</b>SetBool  <code>true</code> or [<code>false</code>]
-<ul><li>Display the axis of the circles (arcs) for create the BSpline</li></ul></li>
+<ul><li>Zeige die Achse der Kreise (B&ouml;gen) an, um die BSpline zu erstellen.</li></ul></li>
 <li><b>switchBSplineCreateCircleConstructor</b>      <b>#</b>SetBool  <code>true</code> or [<code>false</code>]
-<ul><li>Display the circles cretors for create the BSpline</li></ul></li>
+<ul><li>Zeige die Kreiskreatoren zum Erstellen der BSpline an.</li></ul></li>
 <li><b>switchCreateLineDiVatNatOnClick</b>           <b>#</b>SetBool  <code>true</code> or [<code>false</code>]
-<ul><li>Create the Line info on point (0,0,0) or on point mouse clicked (x,y,z) if it is <code>true</code></li>
-<li>If it is <code>true</code> one '*' is displayed in front of text. EX: '*Direction'</li></ul></li></ul>
-</div>
+<ul><li>Erstelle die Linieninfo am Punkt (0,0,0) oder am Punkt, auf den mit der Maus geklickt wurde (x,y,z), wenn <code>true</code> ist.</li>
+<li>Wenn es <code>true</code> ist, wird ein '*' vor dem Text angezeigt. EX: '*Direction'</li></ul></li></ul>
 <p><br>
 Der Schalter <i>(section GroupBox)</i> erm&ouml;glicht es, nur die gew&uuml;nschten Abschnitte anzuzeigen (nur visuell) <code>false</code> or <code>true</code>.
 </p><p>Alle Berechnungen werden ohne Ber&uuml;cksichtigung dieser Option durchgef&uuml;hrt
@@ -694,35 +692,35 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119054630
+Cached time: 20260119060149
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.213 seconds
-Real time usage: 0.282 seconds
-Preprocessor visited node count: 1532/1000000
+CPU time usage: 0.215 seconds
+Real time usage: 0.844 seconds
+Preprocessor visited node count: 1531/1000000
 Post&#8208;expand include size: 40883/2097152 bytes
 Template argument size: 5255/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 15820/5000000 bytes
+Unstrip post&#8208;expand size: 15824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   81.767      1 -total
-  7.18%    5.874     44 Template:LineEdit
-  5.64%    4.608      8 Template:RadioButton
-  4.87%    3.986     10 Template:CheckBox
-  4.87%    3.984      1 Template:Macro/de
-  4.54%    3.710     10 Template:Code
-  3.62%    2.960      5 Template:SpinBox
-  3.58%    2.929      1 Template:CodeDownload
-  3.02%    2.469      1 Template:Caption
-  2.97%    2.430     30 Template:False
+100.00%  121.600      1 -total
+ 10.24%   12.454      1 Template:CodeDownload
+  7.09%    8.621     10 Template:Code
+  5.83%    7.092     44 Template:LineEdit
+  5.66%    6.880     25 Template:Button
+  4.27%    5.190      8 Template:RadioButton
+  3.93%    4.774      1 Template:Macro/de
+  3.80%    4.617      5 Template:SpinBox
+  3.79%    4.603     10 Template:CheckBox
+  3.70%    4.504     19 Template:True
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119054629 and revision id 1740919. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260119060148 and revision id 1740921. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
