--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -293,7 +293,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <h5><span class="mw-headline" id="Ausserhalb">Ausserhalb</span></h5>
 <p>Standardmodus. Der Text wird an der Au&szlig;enseite des Kreisumfangs geschrieben.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 235px">
@@ -310,7 +309,6 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 		</li>
 </ul>
 </center>
-</div>
 <p><span id="Indoor"></span>
 </p>
 <h5><span class="mw-headline" id="Innerhalb">Innerhalb</span></h5>
@@ -968,13 +966,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118192941
+Cached time: 20260119070339
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.488 seconds
-Real time usage: 2.737 seconds
-Preprocessor visited node count: 1592/1000000
+CPU time usage: 0.473 seconds
+Real time usage: 2.408 seconds
+Preprocessor visited node count: 1591/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -984,19 +982,19 @@ Unstrip post&#8208;expand size: 66596/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00% 1863.911      1 -total
-  1.92%   35.742     10 Template:Code
-  1.56%   29.014      1 Template:Draft_Tools_navi/de
-  1.54%   28.639      1 Template:Userdocnavi/de
-  1.27%   23.661      3 Template:ColoredText
-  1.02%   19.053      1 Template:Codeextralink
-  0.89%   16.553     14 Template:Incode
-  0.65%   12.070     22 Template:Button
-  0.65%   12.028      1 Template:Emphasis
-  0.62%   11.464     19 Template:Clear
+100.00% 1550.547      1 -total
+  1.75%   27.105     10 Template:Code
+  1.60%   24.736      1 Template:Codeextralink
+  1.52%   23.517      1 Template:Draft_Tools_navi/de
+  1.52%   23.516      1 Template:Macro/de
+  1.09%   16.925     14 Template:Incode
+  1.00%   15.534      6 Template:SpinBox
+  0.98%   15.128     22 Template:Button
+  0.97%   14.989     19 Template:Clear
+  0.96%   14.861      7 Template:RadioButton
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260118192941 and revision id 1740173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260119070336 and revision id 1740923. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
