--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -555,25 +555,22 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </ul>
 </center>
 <p><br>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><br>
+</p><p><br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_32.png&amp;filetimestamp=20141122164902&amp;.html" class="mw-file-description" title="Internal curve with subtraction."><img alt="Internal curve with subtraction." src="../File/FCCircularText_32.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Internal curve with subtraction.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_32.png&amp;filetimestamp=20141122164902&amp;.html" class="mw-file-description" title="Innere Kurve mit Subtraktion."><img alt="Innere Kurve mit Subtraktion." src="../File/FCCircularText_32.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Innere Kurve mit Subtraktion.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_41.png&amp;filetimestamp=20141125195912&amp;.html" class="mw-file-description" title="Extrusion on a cone with Sp. Inclination 45&deg; axis Z."><img alt="Extrusion on a cone with Sp. Inclination 45&deg; axis Z." src="../File/FCCircularText_41.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="641" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Extrusion on a cone with <b>Sp. Inclination </b>45&deg; axis Z.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_41.png&amp;filetimestamp=20141125195912&amp;.html" class="mw-file-description" title="Extrusion auf einem Kegel mit einer Neigung Sp. Inclination von 45&deg; zur Z-Achse."><img alt="Extrusion auf einem Kegel mit einer Neigung Sp. Inclination von 45&deg; zur Z-Achse." src="../File/FCCircularText_41.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="641" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Extrusion auf einem Kegel mit einer Neigung <b>Sp. Inclination</b> von 45&deg; zur Z-Achse.</div>
 		</li>
 </ul>
 </center>
 <p><br>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><br>
 </p>
@@ -963,35 +960,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119070411
+Cached time: 20260119070454
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 1.027 seconds
-Preprocessor visited node count: 1590/1000000
+CPU time usage: 0.356 seconds
+Real time usage: 0.458 seconds
+Preprocessor visited node count: 1589/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66596/5000000 bytes
+Unstrip post&#8208;expand size: 66671/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  553.408      1 -total
-  1.69%    9.374     14 Template:Incode
-  1.54%    8.506      1 Template:MenuCommand
-  1.32%    7.290      1 Template:Draft_Tools_navi/de
-  1.23%    6.808      6 Template:SpinBox
-  0.90%    4.968     22 Template:Button
-  0.90%    4.966     10 Template:Code
-  0.86%    4.742      7 Template:RadioButton
-  0.84%    4.632     19 Template:Clear
-  0.81%    4.486      3 Template:ColoredText
+100.00%  266.651      1 -total
+  2.64%    7.028      1 Template:Draft_Tools_navi/de
+  1.76%    4.686     18 Template:FALSE
+  1.35%    3.592      7 Template:RadioButton
+  1.31%    3.486     10 Template:CheckBox
+  1.24%    3.319     10 Template:Code
+  1.19%    3.166      1 Template:Macro/de
+  1.13%    3.009      3 Template:ColoredText
+  1.11%    2.967      2 Template:Navigation_menu_2
+  1.00%    2.669      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260119070410 and revision id 1740927. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260119070454 and revision id 1740929. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
