--- a/wiki/pl/TechDraw_CosmeticCircle.html
+++ b/wiki/pl/TechDraw_CosmeticCircle.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw CosmeticCircle/pl</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="pl" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+CosmeticCircle&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Hilfskreis (84% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Hilfskreis (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cercle cosm&eacute;tique par 1 point (84% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -14,7 +14,6 @@
     <div><a href="../pl/TechDraw_Workbench.html" title="TechDraw Workbench/pl">&#347;rodowisko pracy Rysunek Techniczny</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Lokalizacja w menu
 </th></tr>
 <tr>
-<td class="ctEven">Rysunek Techniczny &rarr; Dodaj linie &rarr; Okr&#261;g kosmetyczny z 1 punktu
+<td class="ctEven">Rysunek Techniczny &rarr; Linie &#347;rodka / Gwinty &rarr; Okr&#261;g kosmetyczny z 1 punktu
 </td></tr>
 <tr>
 <th class="ctOdd">&#346;rodowisko pracy
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Opis">Opis</span></h2>
@@ -150,35 +148,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118192859
+Cached time: 20260119071315
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.576 seconds
-Preprocessor visited node count: 350/1000000
-Post&#8208;expand include size: 27975/2097152 bytes
-Template argument size: 10882/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.363 seconds
+Preprocessor visited node count: 349/1000000
+Post&#8208;expand include size: 27997/2097152 bytes
+Template argument size: 10904/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1636/5000000 bytes
+Unstrip post&#8208;expand size: 1641/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  129.374      1 -total
- 24.08%   31.156      1 Template:Caption
- 17.34%   22.434      2 Template:Docnav/pl
- 16.51%   21.363      1 Template:TechDraw_Tools_navi/pl
- 13.63%   17.635      2 Template:Navigation_menu_2
- 11.35%   14.681      1 Template:GuiCommand/pl
- 10.43%   13.490      4 Template:Button
-  7.71%    9.979      1 Template:Userdocnavi/pl
-  7.14%    9.231      1 Template:Incode
-  2.36%    3.052      1 Template:KEY
+100.00%   57.085      1 -total
+ 27.15%   15.497      1 Template:TechDraw_Tools_navi/pl
+ 20.76%   11.853      2 Template:Docnav/pl
+ 14.86%    8.481      2 Template:Navigation_menu_2
+ 12.20%    6.967      1 Template:Caption
+  9.44%    5.386      1 Template:Userdocnavi/pl
+  8.29%    4.735      1 Template:GuiCommand/pl
+  5.87%    3.351      2 Template:MenuCommand
+  5.10%    2.911      4 Template:Button
+  4.68%    2.670      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260118192858 and revision id 1740748. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260119071314 and revision id 1740933. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
