--- a/wiki/pl/TechDraw_CosmeticCircle.html
+++ b/wiki/pl/TechDraw_CosmeticCircle.html
@@ -63,17 +63,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="U.C5.BCycie"></span><span class="mw-headline" id="U&#380;ycie">U&#380;ycie</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Wybierz punkt &#347;rodkowy w widoku rysunku technicznego lub w oknie <a href="../pl/3D_View.html" title="3D View/pl">Widoku 3D</a>.</li>
 <li>Je&#347;li wybra&#322;e&#347; punkt w Widoku 3D: dodaj w&#322;a&#347;ciwy widok Rysunku Technicznego do zaznaczenia, wybieraj&#261;c go w oknie <a href="../pl/Tree_View.html" title="Tree View/pl">Widoku drzewa</a>.</li>
 <li>Istnieje kilka sposob&oacute;w wywo&#322;ania narz&#281;dzia:
 <ul><li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Okr&#261;g kosmetyczny z 1 punktu</b></span>.</li>
-<li>Wybierz opcj&#281; z menu <b>Rysunek Techniczny &rarr; Dodaj linie &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Okr&#261;g kosmetyczny z 1 punktu</b>.</li></ul></li>
+<li>Wybierz opcj&#281; z menu <b>Rysunek Techniczny &rarr; Linie &#347;rodka / Gwinty &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Okr&#261;g kosmetyczny z 1 punktu</b>.</li></ul></li>
 <li>Otworzy si&#281; panel zada&#324;.</li>
 <li>Opcjonalnie dostosuj wsp&oacute;&#322;rz&#281;dne punktu &#347;rodkowego, promie&#324; oraz k&#261;t rozpocz&#281;cia i zako&#324;czenia okr&#281;gu.</li>
 <li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Zostanie dodana geometria okr&#281;gu pomocniczego. W przypadku punktu &#347;rodkowego 3D okr&#261;g jest umieszczany na rzucie punktu.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span class="mw-headline" id="Edycja">Edycja</span></h2>
@@ -148,15 +146,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119071315
+Cached time: 20260119071327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.363 seconds
-Preprocessor visited node count: 349/1000000
-Post&#8208;expand include size: 27997/2097152 bytes
-Template argument size: 10904/2097152 bytes
+CPU time usage: 0.106 seconds
+Real time usage: 0.501 seconds
+Preprocessor visited node count: 348/1000000
+Post&#8208;expand include size: 28008/2097152 bytes
+Template argument size: 10915/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -164,19 +162,19 @@ Unstrip post&#8208;expand size: 1641/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.085      1 -total
- 27.15%   15.497      1 Template:TechDraw_Tools_navi/pl
- 20.76%   11.853      2 Template:Docnav/pl
- 14.86%    8.481      2 Template:Navigation_menu_2
- 12.20%    6.967      1 Template:Caption
-  9.44%    5.386      1 Template:Userdocnavi/pl
-  8.29%    4.735      1 Template:GuiCommand/pl
-  5.87%    3.351      2 Template:MenuCommand
-  5.10%    2.911      4 Template:Button
-  4.68%    2.670      1 Template:Incode
+100.00%  117.286      1 -total
+ 18.54%   21.739      1 Template:TechDraw_Tools_navi/pl
+ 17.04%   19.986      1 Template:Userdocnavi/pl
+ 12.86%   15.088      1 Template:GuiCommand/pl
+ 10.76%   12.623      2 Template:Docnav/pl
+  9.20%   10.796      1 Template:Incode
+  8.66%   10.151      2 Template:Navigation_menu_2
+  8.33%    9.766      1 Template:Caption
+  7.27%    8.528      1 Template:KEY
+  5.51%    6.464      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260119071314 and revision id 1740933. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260119071326 and revision id 1740935. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
