--- a/wiki/pl/TechDraw_CosmeticCircle.html
+++ b/wiki/pl/TechDraw_CosmeticCircle.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_CosmeticCircle.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw CosmeticCircle (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Cercle cosm&eacute;tique par 1 point (84% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw&#720; Cerchio cosmetico (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw CosmeticCircle
 (&#1063;&#1077;&#1088;&#1090;&#1105;&#1078; &#1050;&#1086;&#1089;&#1084;&#1077;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1050;&#1088;&#1091;&#1075;) (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_CosmeticCircle.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#44984;&#48136;&#50896; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -77,15 +77,13 @@
 <h2><span class="mw-headline" id="Edycja">Edycja</span></h2>
 <p>Aby zmieni&#263; atrybuty okr&#281;gu kosmetycznego:
 </p>
-<div class="mw-translate-fuzzy">
 <ol><li>Wybierz geometri&#281; okr&#281;gu kosmetycznego.</li>
 <li>Istnieje kilka sposob&oacute;w wywo&#322;ania narz&#281;dzia:
 <ul><li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Okr&#261;g kosmetyczny z 1 punktu</b></span>.</li>
-<li>Wybierz opcj&#281; z menu <b>Rysunek Techniczny &rarr; Dodaj linie &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Okr&#261;g kosmetyczny z 1 punktu</b>.</li></ul></li>
+<li>Wybierz opcj&#281; z menu <b>Rysunek Techniczny &rarr; Linie &#347;rodka / Gwinty &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Okr&#261;g kosmetyczny z 1 punktu</b>.</li></ul></li>
 <li>Otworzy si&#281; panel zada&#324;.</li>
 <li>Dostosuj wsp&oacute;&#322;rz&#281;dne punktu &#347;rodkowego, promie&#324; lub k&#261;t pocz&#261;tkowy i ko&#324;cowy okr&#281;gu.</li>
 <li>Naci&#347;nij przycisk <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
@@ -146,35 +144,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119071327
+Cached time: 20260119071338
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.501 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 28008/2097152 bytes
-Template argument size: 10915/2097152 bytes
+CPU time usage: 0.100 seconds
+Real time usage: 0.588 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 28019/2097152 bytes
+Template argument size: 10926/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1641/5000000 bytes
+Unstrip post&#8208;expand size: 1645/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  117.286      1 -total
- 18.54%   21.739      1 Template:TechDraw_Tools_navi/pl
- 17.04%   19.986      1 Template:Userdocnavi/pl
- 12.86%   15.088      1 Template:GuiCommand/pl
- 10.76%   12.623      2 Template:Docnav/pl
-  9.20%   10.796      1 Template:Incode
-  8.66%   10.151      2 Template:Navigation_menu_2
-  8.33%    9.766      1 Template:Caption
-  7.27%    8.528      1 Template:KEY
-  5.51%    6.464      2 Template:MenuCommand
+100.00%  188.832      1 -total
+ 24.94%   47.102      1 Template:TechDraw_Tools_navi/pl
+ 16.71%   31.561      1 Template:GuiCommand/pl
+ 13.58%   25.634      1 Template:Caption
+ 12.50%   23.609      1 Template:Incode
+ 12.04%   22.740      2 Template:Navigation_menu_2
+ 11.21%   21.160      2 Template:Docnav/pl
+  7.62%   14.392      4 Template:Button
+  5.24%    9.887      1 Template:Userdocnavi/pl
+  3.21%    6.068      2 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260119071326 and revision id 1740935. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322371-0!canonical and timestamp 20260119071337 and revision id 1740937. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
