--- a/wiki/Online_Help_Startpage.html
+++ b/wiki/Online_Help_Startpage.html
@@ -64,12 +64,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119134412
+Cached time: 20260119134549
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.093 seconds
-Real time usage: 0.444 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.081 seconds
 Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 6141/2097152 bytes
 Template argument size: 1882/2097152 bytes
@@ -80,13 +80,13 @@ Unstrip post&#8208;expand size: 4344/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.628      1 -total
- 62.79%   14.207      1 Template:Userdocnavi
- 36.38%    8.231      2 Template:Docnav
- 25.01%    5.658      1 Template:Navigation_menu_2
+100.00%    5.103      1 -total
+ 57.99%    2.959      1 Template:Userdocnavi
+ 38.72%    1.976      2 Template:Docnav
+ 35.80%    1.827      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20260119134408 and revision id 1740941. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:110-0!canonical and timestamp 20260119134549 and revision id 1740941. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
